# libtiff-feedstock

./: .appveyor.yml  .drone.yml  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_numpy1.17.yaml  linux_64_numpy1.19.yaml  linux_aarch64_.yaml  linux_aarch64_numpy1.17.yaml  linux_aarch64_numpy1.19.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  linux_ppc64le_numpy1.17.yaml  linux_ppc64le_numpy1.19.yaml  osx_.yaml  osx_64_.yaml  osx_64_numpy1.17.yaml  osx_64_numpy1.19.yaml  osx_arm64_.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  win_.yaml  win_64_.yaml  win_64_numpy1.17.yaml  win_64_numpy1.19.yaml  win_arm64_.yaml  win_c_compilervs2008cxx_compilervs2008.yaml  win_c_compilervs2015cxx_compilervs2015.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.ci_support/migrations/: jpeg_to_libjpeg_turbo.yaml
.github/: CODEOWNERS
recipe/: bld.bat  build.sh  downstream_tests.py  meta.yaml  run_test.py  yum_requirements.txt
recipe/cmake_test/: CMakeLists.txt  tiff_example.cc
recipe/patches/: 243_osx_buidl_failing_patch.patch  use_unix_io.patch
